asteroids/templates/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: asteroids-app
  name: asteroids-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asteroids-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: asteroids-app
    spec:
      containers:
      - image: fullaware/asteroids-app
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        name: asteroids-app
        resources:
          limits:
            cpu: 2000m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
