asteroids/templates/mariadb-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-sts
spec:
  serviceName: "mariadb-service"
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:11.0.2
        ports:
        - containerPort: 3306
          name: mariadb-port
        resources:
          limits:
            cpu: 2000m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - name: datadir
          mountPath: /var/lib/mysql/
        - name: asteroids-dbcreation-script
          mountPath: /docker-entrypoint-initdb.d #https://hub.docker.com/_/mariadb Refer Initializing a fresh instance
      volumes:
        - name: asteroids-dbcreation-script
          configMap:
            name: asteroids-dbcreation-script
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      volumeMode: Filesystem
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 300M
