asteroids/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asteroids-api
spec:
  ports:
  - port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    app: asteroids-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
