asteroids/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asteroids-app
spec:
  rules:
  - host: asteroids.local.domain.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: asteroids-app
              port:
                number: 8080
